--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,8 +40,9 @@ body {
 
   & ul {
     list-style-type: disc;
-    list-style-position: inside;
-    margin-left: 1.5rem;
+    list-style-position: outside;
+    margin-left: 0.75rem;
+    padding-left: 0.75rem;
 
     & p {
       display: inline;
@@ -50,8 +51,9 @@ body {
 
   & ol {
     list-style-type: decimal; 
-    list-style-position: inside;
-    margin-left: 1.5rem;
+    list-style-position: outside;
+    margin-left: 0.75rem;
+    padding-left: 0.75rem;
 
     & p {
       display: inline;
@@ -61,12 +63,15 @@ body {
   & ul ul,
   & ol ul {
     list-style-type: circle;
-    margin-left: 2rem;
+    margin-left: 0.75rem;
+    padding-left: 0.75rem;
   }
 
   & ul ul ul,
   & ol ul ul {
     list-style-type: square;
+    margin-left: 0.75rem;
+    padding-left: 0.75rem;
   }
 
 
